--- a/pgups/templates/pgups/reg2.html
+++ b/pgups/templates/pgups/reg2.html
@@ -3,31 +3,106 @@
 <meta charset="utf-8" /> 
 <head>
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
+	<style>
+	input[id*="DELETE"] { display: none; }
+	label[for*="DELETE"] { display: none; }
+	</style>
+
+
+
+<script type="text/html" id="person-template">
+<div id="person-__prefix__">
+    {{ request_person_formset.empty_form }}
+    <a href="#" class="remove_person">Удалить</a><br>
+    <a href="#" id="add-person-button__prefix__" class="btn btn-info add-person">Добавить участника</a>    
+</div>
+</script>
+
+<script type="text/html" id="competitor-template">
+<div id="competitor-__prefix__" class="competitor_div">
+    {{ request_competitor_formset.empty_form }}
+    <a href="#" id="add-competitor-button__prefix__" class="btn btn-info add-competitor">Добавить заплыв</a>
+</div>
+</script>
+
+
 	<script type='text/javascript'>
 
 	$(document).ready(function() {
-	    //var max_fields      = 30; //maximum input boxes allowed
-	    var wrapper         = $("#right"); //Fields wrapper
-	    var add_button      = $("#add_person"); //Add button ID
 
-	    var field_code = '<h1>test</h1>';
+		$("#id_competitorMap").attr('value', '{}');
 
-	    var x = 1; //initlal text box count
-	    $(add_button).click(function(e){ //on add input button click
-	        e.preventDefault();
-	        //if(x < max_fields){ //max input box allowed
-	            x++; //text box increment
-	            
-	            $(wrapper).append('<div>'+field_code+'<a href="#" class="remove_field">Удалить</a></div>'); //add input box
-	        //}
-	        //else {
-	        //	alert("Превышено максимальное число участников в заявке!");
-	        //}
-	    });
+		var addCompetitor = function(person) {
+
+			var competitorMap = JSON.parse($("#id_competitorMap").val());
+			var count = $('.competitor_div').length;
+
+			var tmplMarkup = $('#competitor-template').html();
+			var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+
+			var newCompetitor = $(compiledTmpl).appendTo(person);
+
+			competitorMap[newCompetitor.attr('id').replace(/\D/g,'')] = person.attr('id').replace(/\D/g,'');
+
+			console.log(competitorMap);
+			$("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
+
+			$('#id_competitor_set-TOTAL_FORMS').attr('value', count+1);
+		};	
+	
+		var addPerson = function() {
+	        //ev.preventDefault();
+	        var count = $('#persons-form-container').children().length;
+	        var tmplMarkup = $('#person-template').html();
+	        var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+
+			var newPerson = $(compiledTmpl).appendTo("div#persons-form-container");
+
+	        $('#id_person_set-TOTAL_FORMS').attr('value', count+1);
+	        console.log($('#persons-form-container').children().length);
+
+	        addCompetitor(newPerson);
+	    };		
+
+		addPerson();
+
+		$("#right").on('click', '.add-person', function(){
+		    addPerson();
+		});
 	    
-	    $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-	        e.preventDefault(); $(this).parent('div').remove(); x--;
-	    })
+	    $("#right").on("click", ".remove_person", function(e){ //user click on remove text
+	    	e.preventDefault(); 
+
+	    	//var count_persons = $('#persons-form-container').children().length;
+	    	//var count_competitors = $('.competitor_div').length;
+	    	//var removed_competitors = $(this).parent().find(".competitor_div").length;
+
+	        $(this).parent('div').hide();
+	        $(this).parent().find('input[id*="DELETE"]').prop('checked', true);
+
+	        //$('#id_person_set-TOTAL_FORMS').attr('value', count_persons-1);
+	        //$('#id_competitor_set-TOTAL_FORMS').attr('value', count_competitors-removed_competitors);
+
+	        var parent_id = $(this).parent().attr('id').replace(/\D/g,'');
+	        var competitorMap = JSON.parse($("#id_competitorMap").val());
+			for(var f in competitorMap) {
+		        if(competitorMap[f] == parent_id) {
+		            delete competitorMap[f];
+		        }
+		    }
+	        $("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
+	    });
+
+
+	    $("#right").on("click", ".add-competitor", function(ev){
+	    	ev.preventDefault();
+
+	    	var grandparent = $(this).parent().parent();
+	    	addCompetitor(grandparent); //person div
+	    });
+
+
 	});
 </script>
 
@@ -35,6 +110,7 @@
 <body>
 <form method="POST" class="request-form">{% csrf_token %}  
 <div id="content" style="width: 100%;">
+
 	<div>
 	    <h2>Техническая заявка на участие в соревнованиях по плаванию</h2>
 	    <p>
@@ -43,8 +119,8 @@
 	    Все поля обязательны для заполнения.
 	    </p>
 	</div>
-  <div id="left" style="float:left; width: 60%">
-	<div>      
+
+	<div id="left" style="float:left; width: 35%">    
 	     
 	        <h3 id="request-form-header">Заявитель</h3>
 	        {{ request_form.as_p }}
@@ -59,35 +135,25 @@
 	            {% endfor %}
 	            </ul>
 	    {% endif %}
-	</div> 
-  </div>
 
-  <div id="right" style="width: 35%; float:right; margin: 2 auto"> 
-  <h3 id="request-form-header2">Участники</h3>
-  	<input type="hidden" id="persons_num" value="0">
-  	<input type="button" value="Добавить участника" id="add_person">
-  </div>
+	</div>
 
+	<div id="right" style="width: 65%; float:right; margin: 2 auto"> 
+
+		<h3>Участники</h3>
+
+		{{ request_person_formset.management_form }}
+		{{ request_competitor_formset.management_form }}
+
+		<div id="persons-form-container">
+		</div> 	
+
+	</div>
 </div>
-</form>
+
 
 <div style="clear:both"></div>
-
-	<script>
-	/*
-		    $('#add_person').click(function() {
-		        var persons = parseInt($('#persons_num').val());
-		        persons += 1;
-		        $('#persons_num').val(persons);
-		        alert(persons);
-		        $('#right').append('<h1>test</h1><a href="#" class="remove_field">Удалить</a>');
-		    });
-
-		    $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-	        e.preventDefault(); $(this).parent('div').remove(); x--;
-	    	})
-*/
-	</script>
+</form> 
     
 </body>
 </html>        
