--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -1,104 +1,197 @@
 {% load staticfiles %}
-
 <html>
-
 <meta charset="utf-8" /> 
-
 <head>
-
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
+	<style>
+	input[id*="DELETE"] { display: none; }
+	label[for*="DELETE"] { display: none; }
+	</style>
+
+
+
+<script type="text/html" id="person-template">
+<div id="person-__prefix__">
+<br>
+<hr>
+    {{ request_person_formset.empty_form }}
+    <a href="#" class="remove_person">Удалить участника</a><br>  
+    <a href="#" class="btn btn-info add-competitor">Добавить участнику заплыв</a>  
+</div>
+</script>
+
+<script type="text/html" id="competitor-template">
+<div id="competitor-__prefix__" class="competitor_div">
+    {{ request_competitor_formset.empty_form }}
+</div>
+</script>
+
+
+	<script type='text/javascript'>
+
+	$(document).ready(function() {
+
+		$("#id_competitorMap").attr('value', '{}');
+
+		var addCompetitor = function(person) {
+
+			var competitorMap = JSON.parse($("#id_competitorMap").val());
+			var count = $('.competitor_div').length;
+
+			var tmplMarkup = $('#competitor-template').html();
+			var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+
+			var newCompetitor = $(compiledTmpl).appendTo(person);
+
+			competitorMap[newCompetitor.attr('id').replace(/\D/g,'')] = person.attr('id').replace(/\D/g,'');
+
+			console.log(competitorMap);
+			$("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
+
+			$('#id_competitor_set-TOTAL_FORMS').attr('value', count+1);
+		};	
 	
+		var addPerson = function() {
+	        //ev.preventDefault();
+	        var count = $('#persons-form-container').children().length;
+	        var tmplMarkup = $('#person-template').html();
+	        var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
+
+			var newPerson = $(compiledTmpl).appendTo("div#persons-form-container");
+
+	        $('#id_person_set-TOTAL_FORMS').attr('value', count+1);
+	        console.log($('#persons-form-container').children().length);
+
+	        addCompetitor(newPerson);
+
+            // some animate to scroll to view our new form
+	        $('html, body').animate({
+	                scrollTop: $("#add-person-button").position().top-200
+	            }, 800);
+
+	    };		
+
+		addPerson();
+
+		$("#right").on('click', '.add-person', function(){
+		    addPerson();
+		});
+	    
+	    $("#right").on("click", ".remove_person", function(e){ //user click on remove text
+	    	e.preventDefault(); 
+
+	    	//var count_persons = $('#persons-form-container').children().length;
+	    	//var count_competitors = $('.competitor_div').length;
+	    	//var removed_competitors = $(this).parent().find(".competitor_div").length;
+
+	        $(this).parent('div').hide();
+	        $(this).parent().find('input[id*="DELETE"]').prop('checked', true);
+
+	        //$('#id_person_set-TOTAL_FORMS').attr('value', count_persons-1);
+	        //$('#id_competitor_set-TOTAL_FORMS').attr('value', count_competitors-removed_competitors);
+
+	        var parent_id = $(this).parent().attr('id').replace(/\D/g,'');
+	        var competitorMap = JSON.parse($("#id_competitorMap").val());
+			for(var f in competitorMap) {
+		        if(competitorMap[f] == parent_id) {
+		            delete competitorMap[f];
+		        }
+		    }
+	        $("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
+	    });
+
+
+	    $("#right").on("click", ".add-competitor", function(ev){
+	    	ev.preventDefault();
+
+	    	var parent = $(this).parent();
+	    	addCompetitor(parent); //person div
+	    });
+
+
+/*	    $("#right").on("change", 'select[id*="birth_year"]', function(){ 
+
+	    	var parent_id = $(this).parent().attr('id').replace(/\D/g,'');
+	    	var select_id = '#id_competitor_set-'+parent_id+'-tour';
+
+	        age_id = $(this).val();
+	        request_url = '/get_tours/' + age_id + '/';
+	        $.ajax({
+	            url: request_url,
+	            success: function(data){
+	                $.each(data[0], function(key, value){
+	                    $(select_id).append('<option value="' + this.key + '">' + this.value +'</option>');
+	                });
+	            }
+	            //return false;
+	        })
+	    });
+	*/
+
+
+
+	});
+</script>
+
 </head>
-
 <body>
+<form method="POST" class="request-form">{% csrf_token %}  
+<div id="content" style="width: 100%;">
 
-<div>
+	<div>
+	    <h2>Техническая заявка на участие в соревнованиях по плаванию</h2>
+	    <p>
+	    Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
+	    основную и при необходимости дополнительную дистанцию, а также предварительное время.
+	    Все поля, кроме специально отмеченных, обязательны для заполнения.
+	    </p>
+	</div>
 
-    <h2>Техническая заявка на участие в соревнованиях по плаванию</h2>
+	<div id="left" style="float:left; width: 35%">    
+	     
+	        <h3 id="request-form-header">Заявитель</h3>
+		    <p>
+		    Если заявка индивидуальная, оставьте поле "Команда" пустым.
+		    </p>
 
-    <p>
-    Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
-    основную и при необходимости дополнительную дистанцию, а также предварительное время.
-    Все поля обязательны для заполнения.
-    </p>
+	        {{ request_form.as_p }}
 
+	        <button type="submit">Отправить заявку</button>
+
+	    
+	    {% if messages %}
+	            <ul class="messages">
+	            {% for message in messages %}
+	                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+	            {% endfor %}
+	            </ul>
+	    {% endif %}
+
+	    <a href="tours" style="position: absolute; bottom: 20; left: 20;">Туры</a>
+
+	</div>
+
+	<div id="right" style="width: 65%; float:right; margin: 2 auto"> 
+
+		<h3>Участники</h3>
+		<p>
+	    Если заявка командная, добавьте участников команды, если индивидуальная - то только себя. Первая указанная дистанция идёт в зачёт. Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
+	    </p>
+
+		{{ request_person_formset.management_form }}
+		{{ request_competitor_formset.management_form }}
+
+		<div id="persons-form-container">
+		</div> 	
+		<br><hr><a href="#" id="add-person-button" class="btn btn-info add-person">Добавить участника</a>
+
+	</div>
 </div>
 
-<div>      
 
-    <form method="POST" class="request-form">{% csrf_token %}
-   
-        <h3 id="request-form-header">Заявитель</h3>
-
-        {{ request_form.as_p }}
-
-        <div id="form_set"> 
-
-	        {{ request_person_formset.management_form }}
-	        {{ request_person_formset.non_form_errors }}
-
-	        <hr>           
-	        {% for form in request_person_formset %}
-	        <p>
-	            {{ form.as_table }}
-	        </p>
-	        {% endfor %}
-
-	        {{ request_competitor_formset.management_form }}
-	        {{ request_competitor_formset.non_form_errors }}
-
-	        {% for form in request_competitor_formset %}
-	        
-	            {{ form.as_table }}
-	            <br>
-
-	        {% endfor %}
-
-        </div>
-
-        <input type="button" value="Добавить участника" id="add_more">
-
-		<div id="empty_form" style="display:none">
-			<hr>
-			<p>
-	        	{{ request_person_formset.empty_form.as_table }}
-	    	</p>
-		</div>
-
-		<div id="empty_form2" style="display:none">
-			
-	        	{{ request_competitor_formset.empty_form.as_table }}
-	        <br>
-		</div>		
-
-		<script>
-		    $('#add_more').click(function() {
-		        var form_idx = $('#id_person_set-TOTAL_FORMS').val();
-		        var form_idx2 = $('#id_competitor_set-TOTAL_FORMS').val();
-
-		        $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
-		        $('#form_set').append($('#empty_form2').html().replace(/__prefix__/g, form_idx2));
-		        $('#form_set').append($('#empty_form2').html().replace(/__prefix__/g, parseInt(form_idx2)+1));
-
-		        $('#id_person_set-TOTAL_FORMS').val(parseInt(form_idx) + 1);
-		        $('#id_competitor_set-TOTAL_FORMS').val(parseInt(form_idx2) + 2);
-		    });
-		</script>
-
-        <button type="submit">Отправить заявку</button>
-
-    </form>
-
-    {% if messages %}
-
-            <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-            </ul>
-
-    {% endif %}
-
-</div>     
+<div style="clear:both"></div>
+</form> 
+    
 </body>
-</html>
+</html>        
