--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -194,8 +194,7 @@
 	    {% endif %}
 
 	    <div style="position: absolute; bottom: 20; left: 20;">
-	    <a href="tours" >Туры</a><br>
-	    <a href="distances/1/">Дистанции</a>
+	    <a href="distances">Дистанции</a>
 	    </div>
 
 	</div>
