starts and orders generation

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -194,7 +194,9 @@
 	    {% endif %}
 
 	    <div style="position: absolute; bottom: 20; left: 20;">
-	    <a href="distances">Дистанции</a>
+	    <a href="distances">Автоматическое распределение по заплывам</a><br>
+	    <a href="starts">Утверждённые старты</a><br>
+	    <a href="generate_starts/2/">Перегенерировать старты</a>
 	    </div>
 
 	</div>
