--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -194,9 +194,9 @@
 	    {% endif %}
 
 	    <div style="position: absolute; bottom: 20; left: 20;">
-	    <a href="distances">Автоматическое распределение по заплывам</a><br>
-	    <a href="starts">Утверждённые старты</a><br>
-	    <a href="generate_starts/2/">Перегенерировать старты</a>
+	    <a href="all_starts/1/">Утверждённые старты</a><br>
+	    <a href="tours/">Туры</a><br>
+	    <a href="teams/">Команды</a><br>
 	    </div>
 
 	</div>
