--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -2,6 +2,9 @@
 <html>
 <meta charset="utf-8" /> 
 <head>
+
+	<link href="{% static 'css/main.css' %}" rel="stylesheet">  <!-- CSS -->
+
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 
 	<style>
@@ -9,178 +12,83 @@
 	label[for*="DELETE"] { display: none; }
 	</style>
 
+	<script type="text/html" id="person-template">
+	<div id="person-__prefix__">
+	<br>
+	<hr>
+	    	<table>
+				{% for error in request_person_formset.empty_form.non_field_errors %}
+				    <tr><td>{{ error }}</td></tr>
+				{% endfor %}
+		        {% for field in request_person_formset.empty_form.visible_fields %}
+				<tr>
+				    <td>{{ field.label_tag }}</td>
+				    <td>{{ field }}</td>
+				    <td>{{ field.errors }}</td>
+				</tr>
+				{% endfor %}
+				{% for field in request_person_formset.empty_form.hidden_fields %}
+					<tr><td>{{ field.as_hidden }}</td></tr>
+				{% endfor %}
 
+			</table>
+		
+	    <a href="#" class="remove_person">Удалить участника</a><br>  
+	    <a href="#" class="btn btn-info add-competitor">Добавить участнику заплыв</a>  
+	</div>
+	</script>
 
-<script type="text/html" id="person-template">
-<div id="person-__prefix__">
-<br>
-<hr>
-    {{ request_person_formset.empty_form }}
-    <a href="#" class="remove_person">Удалить участника</a><br>  
-    <a href="#" class="btn btn-info add-competitor">Добавить участнику заплыв</a>  
-</div>
-</script>
+	<script type="text/html" id="competitor-template">
+	<div id="competitor-__prefix__" class="competitor_div">
+	    {{ request_competitor_formset.empty_form }}
+	</div>
+	</script>
 
-<script type="text/html" id="competitor-template">
-<div id="competitor-__prefix__" class="competitor_div">
-    {{ request_competitor_formset.empty_form }}
-</div>
-</script>
-
-
-	<script type='text/javascript'>
-
-	$(document).ready(function() {
-
-		$("#id_competitorMap").attr('value', '{}');
-
-
-	    var filterTours = function(select_id){
-
-	    	person_id = $(select_id).parent().parent().attr('id').replace(/\D/g,''); // person div
-
-	    	pby_selector = '#id_person_set-' + person_id + '-birth_year' + ' option:selected';
-	        year = $(pby_selector).val();
-
-	        gender_selector = '#id_person_set-' + person_id + '-gender' + ' option:selected';
-	        gender = $(gender_selector).val();
-	        request_url = '/get_tours/' + year + '/' + gender + '/';
-
-	        $.ajax({
-	            url: request_url,
-	            success: function(data){
-
-	            	$(select_id).empty();
-
-	                $.each(data, function(key, value){
-	                    $(select_id).append('<option value="' + key + '">' + value +'</option>');
-	                });
-	            }
-	        });	    	
-	    };		
-
-
-
-		var addCompetitor = function(person) {
-
-			var competitorMap = JSON.parse($("#id_competitorMap").val());
-			var count = $('.competitor_div').length;
-
-			var tmplMarkup = $('#competitor-template').html();
-			var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-
-			var newCompetitor = $(compiledTmpl).appendTo(person);
-
-			competitorMap[newCompetitor.attr('id').replace(/\D/g,'')] = person.attr('id').replace(/\D/g,'');
-
-			$("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
-
-			$('#id_competitor_set-TOTAL_FORMS').attr('value', count + 1);
-
-	    	new_tour_id = '#id_competitor_set-' + count.toString() + '-tour';
-
-			filterTours(new_tour_id);
-		};	
-	
-		var addPerson = function() {
-	        //ev.preventDefault();
-	        var count = $('#persons-form-container').children().length;
-	        var tmplMarkup = $('#person-template').html();
-	        var compiledTmpl = tmplMarkup.replace(/__prefix__/g, count);
-
-			var newPerson = $(compiledTmpl).appendTo("div#persons-form-container");
-	        $('#id_person_set-TOTAL_FORMS').attr('value', count+1);
-	        addCompetitor(newPerson);
-
-            // some animate to scroll to view our new form
-	        $('html, body').animate({
-	                scrollTop: $("#add-person-button").position().top-200
-	            }, 800);
-
-	    };		
-
-		addPerson();
-
-		$("#right").on('click', '.add-person', function(){
-		    addPerson();
-		});
-	    
-	    $("#right").on("click", ".remove_person", function(e){ //user click on remove text
-	    	e.preventDefault(); 
-
-	        $(this).parent('div').hide();
-	        $(this).parent().find('input[id*="DELETE"]').prop('checked', true);
-
-	        var parent_id = $(this).parent().attr('id').replace(/\D/g,'');
-	        var competitorMap = JSON.parse($("#id_competitorMap").val());
-			for(var f in competitorMap) {
-		        if(competitorMap[f] == parent_id) {
-		            delete competitorMap[f];
-		        }
-		    }
-	        $("#id_competitorMap").attr('value', JSON.stringify(competitorMap));
-	    });
-
-
-	    $("#right").on("click", ".add-competitor", function(ev){
-	    	ev.preventDefault();
-
-	    	var parent = $(this).parent();
-	    	addCompetitor(parent); //person div
-	    });
-
-	    $("#right").on("change", 'select[id*="birth_year"]', function(){ 
-
-	    	var person = $(this).parent().attr('id');
-
-	    	person_competitors = '#' + person + ' .competitor_div';
-
-	    	$(person_competitors).each(
-	    		function(index) {
-	    			tour_id = $(this).find('select').attr('id');
-	    			tour_id = '#' + tour_id;
-	    			filterTours(tour_id);
-	    		});
-	    });
-
-	    $("#right").on("change", 'select[id*="gender"]', function(){ 
-
-	    	var person = $(this).parent().attr('id');
-
-	    	person_competitors = '#' + person + ' .competitor_div';
-
-	    	$(person_competitors).each(
-	    		function(index) {
-	    			tour_id = $(this).find('select').attr('id');
-	    			tour_id = '#' + tour_id;
-	    			filterTours(tour_id);
-	    		});
-	    });	    
-	});
-</script>
+	<script src="{% static 'js/main.js' %}"></script>  <!-- JS -->
 
 </head>
+
 <body>
-<form method="POST" class="request-form">{% csrf_token %}  
-<div id="content" style="width: 100%;">
 
-	<div>
-	    <h2>Техническая заявка на участие в соревнованиях по плаванию</h2>
+<form method="POST" class="request-form">{% csrf_token %} 
+
+<div id="content">
+
+	<h1>Техническая заявка на участие в соревнованиях по плаванию</h1>
+
+	<div id="header">	    
 	    <p>
-	    Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
+	    <br>Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
 	    основную и при необходимости дополнительную дистанцию, а также предварительное время.
-	    Все поля, кроме специально отмеченных, обязательны для заполнения.
+	    <br>Все поля, кроме специально отмеченных, обязательны для заполнения.
 	    </p>
-	</div>
+    </div>	<!-- End of header --> 
 
-	<div id="left" style="float:left; width: 35%">    
+	<div id="left">    
 	     
-	        <h3 id="request-form-header">Заявитель</h3>
+	        <h3>Заявитель</h3>
 		    <p>
 		    Если заявка индивидуальная, оставьте поле "Команда" пустым.
 		    </p>
 
-	        {{ request_form.as_p }}
+			<table>
+				{% for error in request_form.non_field_errors %}
+				    <tr><td>{{ error }}</td></tr>
+				{% endfor %}
+
+				{% for field in request_form.visible_fields %}
+				    
+				    <tr>
+				    	<td>{{ field.label_tag }}</td>
+				    	<td>{{ field }}</td>
+				    	<td>{{ field.errors }}</td>
+				    </tr>
+
+				{% endfor %}
+				{% for field in request_form.hidden_fields %}
+					<tr><td>{{ field.as_hidden }}</td></tr>
+				{% endfor %}
+			</table>
 
 	        <button type="submit">Отправить заявку</button>
 
@@ -193,15 +101,11 @@
 	            </ul>
 	    {% endif %}
 
-	    <div style="position: absolute; bottom: 20; left: 20;">
-	    <a href="all_starts/1/">Утверждённые старты</a><br>
-	    <a href="tours/">Туры</a><br>
-	    <a href="teams/">Команды</a><br>
-	    </div>
+
 
 	</div>
 
-	<div id="right" style="width: 65%; float:right; margin: 2 auto"> 
+	<div id="right"> 
 
 		<h3>Участники</h3>
 		<p>
@@ -221,6 +125,12 @@
 
 <div style="clear:both"></div>
 </form> 
+
+<div>
+<a href="all_starts/1/">Утверждённые старты</a><br>
+<a href="tours/">Туры</a><br>
+<a href="teams/">Команды</a><br>
+</div>
     
 </body>
 </html>        
