--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -2,10 +2,12 @@
 /*             Basic            */
 /*==============================*/
 
-body {
+html, body {
 	background-color: #3B3B3B;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #FFF9ED;
+	height: auto;
+	width: 100%;
 }
 
 h1 {
@@ -46,7 +48,7 @@ button {
 }
 
 a {
-	color:#FFFFFF;
+	color:#FAE6BB;
 	cursor: pointer;
 }
 
@@ -54,7 +56,7 @@ a:hover,
 a:active,
 a:focus{
 	outline: 0;
-	color:#30D5C8;
+	color:#C9576F;
 }
 
 /*==============================*/
@@ -79,6 +81,7 @@ a:focus{
 	position: relative;
 	float: left;
 	width: 40%;
+	height: 50%;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 20px;
@@ -96,6 +99,18 @@ a:focus{
 
 }
 
+#request-form {
+	width: 100%;
+	height: auto;
+}
+
+#menu {
+	position:relative;
+	width: 40%;
+	margin: 0 auto;
+}
+
+
 /*==============================*/
 /*           Custom links       */
 /*==============================*/
@@ -103,10 +118,14 @@ a:focus{
 .add-person:link,
 .add-person:visited  {
 	display: block;
+
 	width: 170px;
+
 	padding: 10px 15px;
+
     background: #D7FF73;
     color: #3B3B3B;
+
     font-weight: bolder;
     font-size: 11pt;
     text-decoration: none;
@@ -130,10 +149,14 @@ a:focus{
 .add-competitor:link,
 .add-competitor:visited {
 	display: block;
+
 	width: 210px;
+
 	padding: 10px 15px;
+
     background: #D7FF73;
     color: #3B3B3B;
+
     font-weight: bolder;
     font-size: 11pt;
     text-decoration: none;
@@ -141,7 +164,7 @@ a:focus{
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    border: solid 1px #20538D;
+    border: solid 1px #208D24;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -159,8 +182,10 @@ a:focus{
 	display: block;
 	width: 170px;
 	padding: 10px 15px;
+
     background: #FF7391;
     color: #3B3B3B;
+
     font-weight: bolder;
     font-size: 11pt;
     text-decoration: none;
@@ -168,7 +193,7 @@ a:focus{
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    border: solid 1px #20538D;
+    border: solid 1px #FA4B70;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -185,26 +210,29 @@ a:focus{
 .add-competitor:active,
 .add-person:hover,
 .add-person:active {
-	background-color: #AEE81C;
-	border: 1px solid #DBCDB2;
+	background-color: #A4C25B;
+	border: 1px solid #17631A;
 }
 
 .remove_person:hover,
 .remove_person:active {
-	background-color: #D13D5C;
-	border: 1px solid #DBCDB2;
+	background-color: #C9576F;
+	border: 1px solid #CF3E5D;
 }
 
-#request-form {
-	width: 100%;
-	height: auto;
+/* Submit button */
+
+#submit-button {
+	position: relative;
+	top: 31%;
 }
 
 #submit {
     padding: 10px 15px;
     background: #4479BA;
-    color: #FFF;
+    color: #FFF9ED;
     font-size: 11pt;
+    text-align: center;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -234,6 +262,55 @@ a:focus{
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
     background: #2E5481;
     border: solid 1px #203E5F;
+}
+
+/* Remove button */
+
+#remove-person-button {
+	position:relative;
+	float:right;
+	top:-117px;
+}
+
+/* Menu buttons */
+
+#menu-button {
+	display: inline-block;
+	position: relative;
+	float:center;
+}
+
+#menu-button > a {
+	display:block;
+	position:relative;
+	width: 170px;
+	padding: 10px 15px;
+    background: #4D4B4B;
+    color: #FAE6BB;
+    font-weight: bolder;
+    font-size: 11pt;
+    text-decoration: none;
+    text-align: center;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px #FAE1AC;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -webkit-transition-duration: 0.2s;
+    -moz-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+}
+
+#menu-button > a:hover {
+    background: #363434;
+    border: solid 1px #CFB98C;
+    text-decoration: none;
 }
 
 /*==============================*/
