--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="utf-8" /> 
 <head>
+	<link href="{% static 'css/main.css' %}" rel="stylesheet">  <!-- CSS -->
 </head>
 <body>
 
