--- a/pgups/templates/pgups/starts.html
+++ b/pgups/templates/pgups/starts.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8" /> 
 <head>
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<link href="{% static 'css/main.css' %}" rel="stylesheet">  <!-- CSS -->
 </head>
 <body>
 
