--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -1,337 +1,27 @@
-/*==============================*/
-/*             Basic            */
-/*==============================*/
-
-html, body {
-	background-color: #3B3B3B;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #FFF9ED;
-	height: auto;
-	width: 100%;
+.form-horizontal .control-label.text-left{
+    text-align: left;
 }
 
-h1 {
-	text-align: center;
-	color: #FAE6BB;
-	padding: 5px;
+.col-centered{
+    float: none;
+    margin: 0 auto;
 }
 
-h3 {
-	color: #FAE6BB;
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
 }
-
-p {
-	color: #FFF9ED;
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
-
-textarea, input {
-	width: auto;
-	height: auto;
-	background-color: #FFF9ED;
-	color: #3B3B3B;
-} 
-
-select {
-	width: auto;
-	height: auto;
-} 
-
-fieldset, form {
-	color: #FAEDED;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
-
-button {
-	background-color: #FFF9ED;
-	color: #3B3B3B;
-	font-weight: bold;
-	padding: 4px 5px;
-}
-
-a {
-	color:#FAE6BB;
-	cursor: pointer;
-}
-
-a:hover,
-a:active,
-a:focus{
-	outline: 0;
-	color:#C9576F;
-}
-
-/*==============================*/
-/*             Divs             */
-/*==============================*/
-
-#content {
-	width: 100%;
-	height: auto;
-}
-
-#header {
-	width: 45%;
-	font-size: 13pt;
-	font-weight: normal;
-	text-align: left;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#left {
-	position: relative;
-	float: left;
-	width: 35%;
-	height: 50%;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 20px;
-	padding-left: 3%;
-}
-
-#right {
-	position: relative;
-	float: left;
-	width: 53%;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 20px;
-	padding-right: 3%;
-
-}
-
-#request-form {
-	width: 100%;
-	height: auto;
-}
-
-#menu {
-	position:relative;
-	width: 40%;
-	margin: 0 auto;
-}
-
-.competitor_div {
-	width: 100%;
-}
-
-
-/*==============================*/
-/*           Custom links       */
-/*==============================*/
-
-.add-person:link,
-.add-person:visited  {
-	display: block;
-
-	width: 170px;
-
-	padding: 10px 15px;
-
-    background: #D7FF73;
-    color: #3B3B3B;
-
-    font-weight: bolder;
-    font-size: 11pt;
-    text-decoration: none;
-    text-align: center;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #20538D;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition-duration: 0.2s;
-    -moz-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-.add-competitor:link,
-.add-competitor:visited {
-	display: block;
-
-	width: 210px;
-
-	padding: 10px 15px;
-
-    background: #D7FF73;
-    color: #3B3B3B;
-
-    font-weight: bolder;
-    font-size: 11pt;
-    text-decoration: none;
-    text-align: center;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #208D24;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition-duration: 0.2s;
-    -moz-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-.remove_person:link,
-.remove_person:visited {
-	display: block;
-	width: 170px;
-	padding: 10px 15px;
-
-    background: #FF7391;
-    color: #3B3B3B;
-
-    font-weight: bolder;
-    font-size: 11pt;
-    text-decoration: none;
-    text-align: center;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #FA4B70;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition-duration: 0.2s;
-    -moz-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-.add-competitor:hover,
-.add-competitor:active,
-.add-person:hover,
-.add-person:active {
-	background-color: #A4C25B;
-	border: 1px solid #17631A;
-}
-
-.remove_person:hover,
-.remove_person:active {
-	background-color: #C9576F;
-	border: 1px solid #CF3E5D;
-}
-
-/* Submit button */
-
-#submit-button {
-	position: relative;
-	width: 20%;
-	margin: 0 auto;
-}
-
-#submit {
-    padding: 10px 15px;
-    background: #4479BA;
-    color: #FFF9ED;
-    height: 50px;
-    width: 200px;
-    font-size: 12pt;
-    text-align: center;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #20538D;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition-duration: 0.2s;
-    -moz-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-#submit:hover {
-    background: #356094;
-    border: solid 1px #2A4E77;
-    text-decoration: none;
-}
-
-#submit:active {
-    -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
-    background: #2E5481;
-    border: solid 1px #203E5F;
-}
-
-/* Remove button */
-
-#remove-person-button {
-	position:relative;
-	float:right;
-	width: 30%;
-	top:-117px;
-}
-
-/* Menu buttons */
-
-#menu-button {
-	display: inline-block;
-	position: relative;
-	float:center;
-}
-
-#menu-button > a {
-	display:block;
-	position:relative;
-	width: 170px;
-	padding: 10px 15px;
-    background: #4D4B4B;
-    color: #FAE6BB;
-    font-weight: bolder;
-    font-size: 11pt;
-    text-decoration: none;
-    text-align: center;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    border: solid 1px #FAE1AC;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-    -webkit-transition-duration: 0.2s;
-    -moz-transition-duration: 0.2s;
-    transition-duration: 0.2s;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-}
-
-#menu-button > a:hover {
-    background: #363434;
-    border: solid 1px #CFB98C;
-    text-decoration: none;
-}
-
-/*==============================*/
-/*           Form fields        */
-/*==============================*/
-
-#left > .field-wrapper > label {
-	display:inline-block;
-	width: 50%;
-}
-
-.field-wrapper > label {
-	display:inline-block;
-	width: 20%;
-}
-
