--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -1,110 +1,154 @@
+{% extends 'pgups/base.html' %}
 {% load staticfiles %}
-
-<html>
-<meta charset="utf-8" /> 
-<head>
-	<link href="{% static 'css/main.css' %}" rel="stylesheet">  <!-- CSS -->
-	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-	<style>
-	input[id*="DELETE"] { display: none; }
-	label[for*="DELETE"] { display: none; }
-	</style>
-	<script type="text/html" id="person-template">
-		<div id="person-__prefix__" style="border-top:1px solid #FFF9ED;border-bottom:1px solid #FFF9ED;padding:10px 0px;margin:5px">
-			<br>
-			{% for field in request_person_formset.empty_form.visible_fields %}
-    		<div class="field-wrapper">
-        		{{ field.errors }}
-        		{{ field.label_tag }} {{ field }}
-        	{% if field.help_text %}
-        		<p class="help">{{ field.help_text|safe }}</p>
-        	{% endif %}
+{% load i18n widget_tweaks %}
+{% block content %}
+	<!-- Jumbotron -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Техническая заявка на участие в соревнованиях по плаванию</h1>
+        <p>Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
+	    основную и при необходимости дополнительную дистанцию, а также предварительное время.</p>
+        <p>Все поля, кроме специально отмеченных, обязательны для заполнения.</p>
+      </div>
+    </div>
+    <!-- Jumbotron -->
+    <!-- MEGAFORM -->
+	<form class="form-horizontal" role="form" action="." method="post">
+		{% csrf_token %} 
+	    <div class="container">
+			<div id="left">   
+		        <h3>Заявитель</h3>
+		        <br>
+			    <p>Если заявка индивидуальная, оставьте поле "Команда" пустым.</p>
+			    <br>
+			    {% for field in request_form.visible_fields %}
+			        {% if field.errors %}
+			            <div class="form-group has-error">
+			                <label class="col-sm-3 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+			                <div class="col-sm-5">
+			                    {{ field|attr:"class:form-control" }}
+			                    <span class="help-block">
+			                        {% for error in  field.errors %}{{ error }}{% endfor %}
+			                    </span>
+			                </div>
+			            </div>
+			        {% else %}
+			            <div class="form-group">
+			                <label class="col-sm-3 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+			                <div class="col-sm-5">
+			                    {{ field|attr:"class:form-control" }}
+			                    {% if field.help_text %}
+			                        <p class="help-block"><small>{{ field.help_text }}</small></p>
+			                    {% endif %}
+			                </div>
+			            </div>
+			        {% endif %}
+			    {% endfor %}
+			    {% for field in request_form.hidden_fields %}
+					<div>{{ field.as_hidden }}</div>
+				{% endfor %}
+				<hr>
 			</div>
-			{% endfor %}
-			{% for field in request_person_formset.empty_form.hidden_fields %}
-			<div>{{ field.as_hidden }}</div>
-			{% endfor %}
-		    <br>
-		    
-		    <div id="remove-person-button">
-		    <a href="#" class="remove_person">Удалить участника</a>
-		    <hr style="height:1px;visibility:hidden;margin-bottom:-1px">
-		    <a href="#" class="btn btn-info add-competitor">Добавить участнику заплыв</a>
-		    </div>
+			<div id="right"> 
+				<br>
+				<h3>Участники</h3>
+				<br>
+				<p>Если заявка командная, добавьте участников команды, если индивидуальная - то только себя.
+				Первая указанная дистанция идёт в зачёт. Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
+			    </p>
+			    <br>
+				{{ request_person_formset.management_form }}
+				{{ request_competitor_formset.management_form }}
+				<div id="persons-form-container"></div>
+				<hr>
+				<a href="#" id="add-person-button" class="btn btn-success btn-md add-person">Добавить участника</a>
+			</div>
+			<br>
+			<div class="row">
+			<div class="col-lg-1 col-centered">
+				<button id="submit" type="submit" class="btn btn-primary btn-lg">Отправить заявку</button>
+			</div>
+			</div>
+			<br>
+		</div>
+	</form>
+	<!-- MEGAFORM -->
+	<script type="text/html" id="person-template">		
+		<div id="person-__prefix__" class="row">
+			<hr><br>
+			<div class="col-sm-5">
+			    {% for field in request_person_formset.empty_form.visible_fields %}
+			        {% if field.errors %}
+			            <div class="form-group has-error">
+			                <label class="col-sm-4 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+			                <div class="col-sm-8">
+			                    {{ field|attr:"class:form-control" }}
+			                    <span class="help-block">
+			                        {% for error in  field.errors %}{{ error }}{% endfor %}
+			                    </span>
+			                </div>
+			            </div>
+			        {% else %}
+			            <div class="form-group">
+			                <label class="col-sm-4 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+			                <div class="col-sm-8">
+			                    {{ field|attr:"class:form-control" }}
+			                    {% if field.help_text %}
+			                        <p class="help-block"><small>{{ field.help_text }}</small></p>
+			                    {% endif %}
+			                </div>
+			            </div>
+			        {% endif %}
+			    {% endfor %}
+			    {% for field in request_person_formset.empty_form.hidden_fields %}
+					<div>{{ field.as_hidden }}</div>
+				{% endfor %}
+			</div>
+		    <div class="col-sm-2">
+			    <a href="#" class="btn btn-danger btn-md btn-block remove_person">Удалить участника</a>
+			    <a href="#" class="btn btn-success btn-md btn-block add-competitor">Добавить заплыв</a>
+		    </div>	
+		    <div id="competitor-col" class="col-sm-5"></div>
 		</div>
 	</script>
 	<script type="text/html" id="competitor-template">
 		<div id="competitor-__prefix__" class="competitor_div">
-		    {{ request_competitor_formset.empty_form }}
+			<div class="row">
+				<div class="col-sm-10">
+				    {% for field in request_competitor_formset.empty_form.visible_fields %}
+				        {% if field.errors %}
+				            <div class="form-group has-error">
+				                <label class="col-sm-2 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+				                <div class="col-sm-10">
+				                    {{ field|attr:"class:form-control" }}
+				                    <span class="help-block">
+				                        {% for error in  field.errors %}{{ error }}{% endfor %}
+				                    </span>
+				                </div>
+				            </div>
+				        {% else %}
+				            <div class="form-group">
+				                <label class="col-sm-2 control-label text-left" for="id_{{ field.name }}">{{ field.label }}</label>
+				                <div class="col-sm-10">
+				                    {{ field|attr:"class:form-control" }}
+				                    {% if field.help_text %}
+				                        <p class="help-block"><small>{{ field.help_text }}</small></p>
+				                    {% endif %}
+				                </div>
+				            </div>
+				        {% endif %}
+				    {% endfor %}
+				    {% for field in request_competitor_formset.empty_form.hidden_fields %}
+						<div>{{ field.as_hidden }}</div>
+					{% endfor %}
+				</div>
+				<div class="col-sm-2">
+					<a href="#" class="btn btn-danger btn-sm remove-competitor">
+          				<span class="glyphicon glyphicon-remove"></span>
+        			</a>
+				</div>
+			</div>
+			<hr>
 		</div>
 	</script>
-	<script src="{% static 'js/main.js' %}"></script>  <!-- JS -->
-</head>
-<body>
-<form method="POST" class="request-form">{% csrf_token %} 
-<div id="content">
-	<div id="menu"> <!-- Menu -->
-		<div id="menu-button"><a href="all_starts/1/">Утверждённые старты</a></div>
-		<div id="menu-button"><a href="tours/">Туры</a></div>
-		<div id="menu-button"><a href="teams/">Команды</a></div>
-	</div> 			<!-- End of menu -->
-	<h1>Техническая заявка на участие в соревнованиях по плаванию</h1>
-	<div id="header">	    
-	    <p>
-	    <br>Пожалуйста, внимательно заполните заявку. Укажите имена и фамилии участников, год рождения,
-	    основную и при необходимости дополнительную дистанцию, а также предварительное время.
-	    <br>Все поля, кроме специально отмеченных, обязательны для заполнения.
-	    </p>
-    </div>			<!-- End of header -->
-	<div id="left">    	     
-	        <h3>Заявитель</h3>
-		    <p>
-		    Если заявка индивидуальная, оставьте поле "Команда" пустым.
-		    </p>
-
-			{% for field in request_form.visible_fields %}
-    		<div class="field-wrapper">
-        		{{ field.errors }}
-        		{{ field.label_tag }} {{ field }}
-        	{% if field.help_text %}
-        		<p class="help">{{ field.help_text|safe }}</p>
-        	{% endif %}
-			</div>
-			{% endfor %}
-			{% for field in request_form.hidden_fields %}
-				<div>{{ field.as_hidden }}</div>
-			{% endfor %}
-    
-	    {% if messages %}
-	            <ul class="messages">
-	            {% for message in messages %}
-	                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-	            {% endfor %}
-	            </ul>
-	    {% endif %}
-
-	</div>
-
-	<div id="right"> 
-
-		<h3>Участники</h3>
-		<p>
-	    Если заявка командная, добавьте участников команды, если индивидуальная - то только себя. Первая указанная дистанция идёт в зачёт. Для каждого участника будет учитываться только одна основная и одна дополнительная (по желанию) дистанция.
-	    </p>
-
-		{{ request_person_formset.management_form }}
-		{{ request_competitor_formset.management_form }}
-
-		<div id="persons-form-container"></div> 
-
-		<a href="#" id="add-person-button" class="btn btn-info add-person">Добавить участника</a>
-
-	</div>
-</div>
-
-<div style="clear:both"></div>
-<div id="submit-button"><button id="submit" type="submit">Отправить заявку</button></div>
-
-</form> 
-</body>
-</html>        
+{% endblock %}
